--- a/index.html
+++ b/index.html
@@ -3,73 +3,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tinder Login</title>
+    <title>OnlyFans Login</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #ff6b6b; /* Tinder's red background */
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f6f8fa;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            color: white;
         }
-        .login-container {
-            background-color: white;
-            padding: 40px;
+        .container {
+            display: flex;
+            width: 80%;
+            max-width: 1200px;
+            background: white;
             border-radius: 10px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-            width: 300px;
+            overflow: hidden;
+        }
+        .left-section {
+            background: #00A3FF url('OnlyFans-Logo-1200.png') no-repeat center center;
+            background-size: cover;
+            width: 50%;
+            display: center;
+            justify-content: center;
+            align-items: center;
+        }
+        .right-section {
+            width: 50%;
+            padding: 50px;
+            display: center;
+            flex-direction: column;
+            justify-content: center;
+        }
+        .login-container {
             text-align: center;
         }
         .login-container h2 {
-            color: #ff6b6b; /* Tinder's red color */
+            color: #111;
             margin-bottom: 20px;
         }
-        .login-container input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-            font-size: 16px;
+        .input-group {
+            margin: 15px 0;
+            text-align: left;
         }
-        .login-container button {
+        .input-group label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+            color: #333;
+        }
+        .input-group input {
             width: 100%;
             padding: 10px;
-            background-color: #ff6b6b; /* Tinder's button color */
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 14px;
+        }
+        .btn {
+            width: 100%;
+            padding: 10px;
+            background-color: #00A3FF;
             border: none;
             border-radius: 5px;
             color: white;
             font-size: 16px;
             cursor: pointer;
+            font-weight: bold;
+            margin-top: 10px;
             transition: background-color 0.3s;
         }
-        .login-container button:hover {
-            background-color: #ff4c4c; /* Slightly darker red */
+        .btn:hover {
+            background-color: #007ACC;
         }
-        .login-container a {
-            color: #ff6b6b; /* Tinder's red color */
+        .social-login {
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+        .social-login button {
+            background-color: #007ACC;
+            border: none;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 14px;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+        .social-login button:hover {
+            background-color: #005FA3;
+        }
+        .footer {
+            margin-top: 20px;
+            font-size: 14px;
+        }
+        .footer a {
+            color: #007bff;
             text-decoration: none;
-            display: block;
-            margin-top: 10px;
         }
-        .login-container a:hover {
+        .footer a:hover {
             text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div class="login-container">
-        <h2>Tinder</h2>
-        <form action="/login" method="POST">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-        </form>
-        <a href="#">Forgot your password?</a>
-        <a href="#">Sign up</a>
+
+<div class="container">
+    <div class="left-section">
+        <!-- No additional text or content in the left section -->
     </div>
+    <div class="right-section">
+        <div class="login-container">
+            <h2>Log in</h2>
+            <form>
+                <div class="input-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <button type="submit" class="btn">Log In</button>
+            </form>
+            <div class="social-login">
+                <button>SIGN IN WITH X</button>
+                <button>SIGN IN WITH GOOGLE</button>
+                <button>PASSWORDLESS SIGN IN</button>
+            </div>
+            <div class="footer">
+                <p><a href="#">Forgot password?</a> · <a href="#">Sign up for OnlyFans</a></p>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
