--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
             align-items: center;
         }
         .right-section {
-            width: 50%;
-            padding: 50px;
-            display: center;
-            flex-direction: column;
-            justify-content: center;
+            .right-section {
+                width: 50%;
+                padding: 50px;
+                display: flex; /* Change from 'center' to 'flex' to use flexbox */
+                flex-direction: column; /* Ensure content is stacked vertically */
+                justify-content: center; /* Center content vertically */
+                align-items: center; /* Center content horizontally */
+                box-sizing: border-box; /* Ensure padding is included in width */
         }
         .login-container {
             text-align: center;
